[package]
name = "mini_git"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mini_git"
path = "src/main.rs"

[dependencies]
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
flate2 = "1.0"
